# Airport-Protection-Manager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  frontend
frontend/: image-editor.html  index.html  style.css  test-auth.html
frontend/js/: api.js  auth.js  coordinateEntry.js  image-editor.js  main.js  map.js  ui.js
src/: Airport.cpp  Airport.h  AirportController.cpp  AirportController.h  AirportRepository.cpp  AirportRepository.h  ConflictController.cpp  ConflictController.h  ConflictRepository.cpp  ConflictRepository.h  DatabaseManager.cpp  DatabaseManager.h  FlightProcedure.cpp  FlightProcedure.h  FlightProcedureController.cpp  FlightProcedureController.h  FlightProcedureRepository.cpp  FlightProcedureRepository.h  LICENSE  Project.cpp  Project.h  ProjectController.cpp  ProjectController.h  ProjectRepository.cpp  ProjectRepository.h  Waypoint.cpp  Waypoint.h  WaypointController.cpp  WaypointController.h  WaypointRepository.cpp  WaypointRepository.h  main.cpp
